--- a/src/components/notification/style.css
+++ b/src/components/notification/style.css
@@ -1,16 +1,21 @@
 .notification {
   width: 200px;
   margin: 10px 5px;
-  font-size: 14px;
-  box-shadow: 0 2px 4px 1px rgba(0, 0, 0, .5);
+  font-size: 1rem;
+  box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.5);
   border-radius: 2px;
   animation: calc(var(--value) * 0.1) ease-out calc(var(--value) * 0.9) fadeOut;
   z-index: 1000;
+  position: fixed;
+  bottom: 4.5rem;
+  right: 4.5rem;
+  padding: 0.825rem 1rem;
 }
 
 /* Success */
 .notification.success {
-  background: #cdfccd;
+  background: var(--dark-blue);
+  color: var(--white);
 }
 
 .notification.success .timer {
@@ -19,11 +24,13 @@
 
 /* Error */
 .notification.error {
-  background: #ffe3e3;
+  background: var(--white);
+  color: var(--red);
+  border: 2px solid var(--red);
 }
 
 .notification.error .timer {
-  background: #c28585;
+  background: var(--red);
 }
 
 /* Warning */
@@ -68,6 +75,15 @@
 
 .notification-body {
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  padding-bottom: 4px;
+}
+
+.notification__icon-suc {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-right: 1rem;
 }
 
 @keyframes fadeOut {
